// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> +++ check calendar search 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "j3x7uw",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          Object {
            "hash": "",
            "key": "ll11hg",
            "pathname": "/search",
            "search": "?date=2021-12-10",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 1,
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "ll11hg",
          "pathname": "/search",
          "search": "?date=2021-12-10",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <withRouter(Connect(List))>
      <Connect(List)
        history={
          Object {
            "action": "PUSH",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "j3x7uw",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
              Object {
                "hash": "",
                "key": "ll11hg",
                "pathname": "/search",
                "search": "?date=2021-12-10",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 1,
            "length": 2,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "ll11hg",
              "pathname": "/search",
              "search": "?date=2021-12-10",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "key": "ll11hg",
            "pathname": "/search",
            "search": "?date=2021-12-10",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": false,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
      >
        <List
          active={1}
          articles={
            Array [
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 1,
                "image": "",
                "isRead": true,
                "name": "How to use hooks in React?",
                "preview": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 2,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React? (||)",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 3,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-04-30",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 4,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-11-14",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 5,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 6,
                "image": "",
                "isRead": false,
                "name": "second page",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 7,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 8,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 9,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
            ]
          }
          history={
            Object {
              "action": "PUSH",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "j3x7uw",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                Object {
                  "hash": "",
                  "key": "ll11hg",
                  "pathname": "/search",
                  "search": "?date=2021-12-10",
                  "state": undefined,
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 1,
              "length": 2,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "ll11hg",
                "pathname": "/search",
                "search": "?date=2021-12-10",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "ll11hg",
              "pathname": "/search",
              "search": "?date=2021-12-10",
              "state": undefined,
            }
          }
          match={
            Object {
              "isExact": false,
              "params": Object {},
              "path": "/",
              "url": "/",
            }
          }
          setActive={[Function]}
        >
          <div
            className="list"
          >
            <Connect(Edit)>
              <Edit
                editMode={true}
                handleMode={[Function]}
              >
                <div
                  className="editMode__container editMode__container-edit"
                >
                  <Link
                    className="waves-effect waves-light redC-bg lighten-3 btn"
                    to="/add"
                  >
                    <LinkAnchor
                      className="waves-effect waves-light redC-bg lighten-3 btn"
                      href="/add"
                      navigate={[Function]}
                    >
                      <a
                        className="waves-effect waves-light redC-bg lighten-3 btn"
                        href="/add"
                        onClick={[Function]}
                      >
                        <i
                          className="material-icons left"
                        >
                          add
                        </i>
                        Add article
                      </a>
                    </LinkAnchor>
                  </Link>
                  <button
                    className="waves-effect waves-light redC-bg lighten-3 btn"
                    onClick={[Function]}
                  >
                    <i
                      className="material-icons left"
                    >
                      close
                    </i>
                    Exit
                  </button>
                </div>
              </Edit>
            </Connect(Edit)>
            <p
              className="empty"
            >
              Articles run away!
            </p>
          </div>
        </List>
      </Connect(List)>
    </withRouter(Connect(List))>
  </Router>
</Provider>
`;

exports[`<List /> +++ check text search 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "hpotpg",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          Object {
            "hash": "",
            "key": "gzzzx4",
            "pathname": "/search",
            "search": "?string=how",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 1,
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "gzzzx4",
          "pathname": "/search",
          "search": "?string=how",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <withRouter(Connect(List))>
      <Connect(List)
        history={
          Object {
            "action": "PUSH",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "hpotpg",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
              Object {
                "hash": "",
                "key": "gzzzx4",
                "pathname": "/search",
                "search": "?string=how",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 1,
            "length": 2,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "gzzzx4",
              "pathname": "/search",
              "search": "?string=how",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "key": "gzzzx4",
            "pathname": "/search",
            "search": "?string=how",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": false,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
      >
        <List
          active={1}
          articles={
            Array [
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 1,
                "image": "",
                "isRead": true,
                "name": "How to use hooks in React?",
                "preview": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 2,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React? (||)",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 3,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-04-30",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 4,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-11-14",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 5,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 6,
                "image": "",
                "isRead": false,
                "name": "second page",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 7,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 8,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
              Object {
                "date": "2021-05-20",
                "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                "id": 9,
                "image": "",
                "isRead": false,
                "name": "How to use hooks in React?",
              },
            ]
          }
          history={
            Object {
              "action": "PUSH",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "hpotpg",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                Object {
                  "hash": "",
                  "key": "gzzzx4",
                  "pathname": "/search",
                  "search": "?string=how",
                  "state": undefined,
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 1,
              "length": 2,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "gzzzx4",
                "pathname": "/search",
                "search": "?string=how",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "gzzzx4",
              "pathname": "/search",
              "search": "?string=how",
              "state": undefined,
            }
          }
          match={
            Object {
              "isExact": false,
              "params": Object {},
              "path": "/",
              "url": "/",
            }
          }
          setActive={[Function]}
        >
          <div
            className="list"
          >
            <Connect(Edit)>
              <Edit
                editMode={true}
                handleMode={[Function]}
              >
                <div
                  className="editMode__container editMode__container-edit"
                >
                  <Link
                    className="waves-effect waves-light redC-bg lighten-3 btn"
                    to="/add"
                  >
                    <LinkAnchor
                      className="waves-effect waves-light redC-bg lighten-3 btn"
                      href="/add"
                      navigate={[Function]}
                    >
                      <a
                        className="waves-effect waves-light redC-bg lighten-3 btn"
                        href="/add"
                        onClick={[Function]}
                      >
                        <i
                          className="material-icons left"
                        >
                          add
                        </i>
                        Add article
                      </a>
                    </LinkAnchor>
                  </Link>
                  <button
                    className="waves-effect waves-light redC-bg lighten-3 btn"
                    onClick={[Function]}
                  >
                    <i
                      className="material-icons left"
                    >
                      close
                    </i>
                    Exit
                  </button>
                </div>
              </Edit>
            </Connect(Edit)>
            <Connect(Article)
              date="2021-05-20"
              desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
              id={1}
              image=""
              isRead={true}
              key="1"
              name="How to use hooks in React?"
              preview="Lorem ipsum dolor sit amet consectetur adipisicing elit."
            >
              <Article
                date="2021-05-20"
                desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
                editMode={true}
                handleDeleteElement={[Function]}
                id={1}
                image=""
                isRead={true}
                name="How to use hooks in React?"
                preview="Lorem ipsum dolor sit amet consectetur adipisicing elit."
              >
                <div
                  className="container article"
                >
                  <div
                    className="leftImage"
                  >
                    <span>
                      No image
                    </span>
                  </div>
                  <div
                    className="rightDescr"
                  >
                    <div
                      className="top"
                    >
                      <div
                        className="top-left"
                      >
                        <Link
                          className="link articleLink"
                          to="/1"
                        >
                          <LinkAnchor
                            className="link articleLink"
                            href="/1"
                            navigate={[Function]}
                          >
                            <a
                              className="link articleLink"
                              href="/1"
                              onClick={[Function]}
                            >
                              <div
                                className="title read edit"
                              >
                                How to use hooks in React?
                              </div>
                            </a>
                          </LinkAnchor>
                        </Link>
                        <div
                          className="buttons"
                        >
                          <button
                            className="waves-effect waves-light redC-bg lighten-3 btn btn-delete"
                            onClick={[Function]}
                          >
                            <i
                              className="material-icons center"
                            >
                              delete
                            </i>
                          </button>
                        </div>
                      </div>
                      <div
                        className="date"
                      >
                        2021-05-20
                      </div>
                    </div>
                    <div
                      className="bottom"
                    >
                      <div
                        className="descr"
                      >
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.
                      </div>
                    </div>
                  </div>
                </div>
              </Article>
            </Connect(Article)>
            <Connect(Article)
              date="2021-05-20"
              desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
              id={2}
              image=""
              isRead={false}
              key="2"
              name="How to use hooks in React? (||)"
            >
              <Article
                date="2021-05-20"
                desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
                editMode={true}
                handleDeleteElement={[Function]}
                id={2}
                image=""
                isRead={false}
                name="How to use hooks in React? (||)"
              >
                <div
                  className="container article"
                >
                  <div
                    className="leftImage"
                  >
                    <span>
                      No image
                    </span>
                  </div>
                  <div
                    className="rightDescr"
                  >
                    <div
                      className="top"
                    >
                      <div
                        className="top-left"
                      >
                        <Link
                          className="link articleLink"
                          to="/2"
                        >
                          <LinkAnchor
                            className="link articleLink"
                            href="/2"
                            navigate={[Function]}
                          >
                            <a
                              className="link articleLink"
                              href="/2"
                              onClick={[Function]}
                            >
                              <div
                                className="title false edit"
                              >
                                How to use hooks in React? (||)
                              </div>
                            </a>
                          </LinkAnchor>
                        </Link>
                        <div
                          className="buttons"
                        >
                          <button
                            className="waves-effect waves-light redC-bg lighten-3 btn btn-delete"
                            onClick={[Function]}
                          >
                            <i
                              className="material-icons center"
                            >
                              delete
                            </i>
                          </button>
                        </div>
                      </div>
                      <div
                        className="date"
                      >
                        2021-05-20
                      </div>
                    </div>
                    <div
                      className="bottom"
                    >
                      <div
                        className="descr"
                      >
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.
                      </div>
                    </div>
                  </div>
                </div>
              </Article>
            </Connect(Article)>
            <Connect(Article)
              date="2021-05-20"
              desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
              id={3}
              image=""
              isRead={false}
              key="3"
              name="How to use hooks in React?"
            >
              <Article
                date="2021-05-20"
                desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
                editMode={true}
                handleDeleteElement={[Function]}
                id={3}
                image=""
                isRead={false}
                name="How to use hooks in React?"
              >
                <div
                  className="container article"
                >
                  <div
                    className="leftImage"
                  >
                    <span>
                      No image
                    </span>
                  </div>
                  <div
                    className="rightDescr"
                  >
                    <div
                      className="top"
                    >
                      <div
                        className="top-left"
                      >
                        <Link
                          className="link articleLink"
                          to="/3"
                        >
                          <LinkAnchor
                            className="link articleLink"
                            href="/3"
                            navigate={[Function]}
                          >
                            <a
                              className="link articleLink"
                              href="/3"
                              onClick={[Function]}
                            >
                              <div
                                className="title false edit"
                              >
                                How to use hooks in React?
                              </div>
                            </a>
                          </LinkAnchor>
                        </Link>
                        <div
                          className="buttons"
                        >
                          <button
                            className="waves-effect waves-light redC-bg lighten-3 btn btn-delete"
                            onClick={[Function]}
                          >
                            <i
                              className="material-icons center"
                            >
                              delete
                            </i>
                          </button>
                        </div>
                      </div>
                      <div
                        className="date"
                      >
                        2021-05-20
                      </div>
                    </div>
                    <div
                      className="bottom"
                    >
                      <div
                        className="descr"
                      >
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.
                      </div>
                    </div>
                  </div>
                </div>
              </Article>
            </Connect(Article)>
            <Connect(Article)
              date="2021-04-30"
              desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
              id={4}
              image=""
              isRead={false}
              key="4"
              name="How to use hooks in React?"
            >
              <Article
                date="2021-04-30"
                desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
                editMode={true}
                handleDeleteElement={[Function]}
                id={4}
                image=""
                isRead={false}
                name="How to use hooks in React?"
              >
                <div
                  className="container article"
                >
                  <div
                    className="leftImage"
                  >
                    <span>
                      No image
                    </span>
                  </div>
                  <div
                    className="rightDescr"
                  >
                    <div
                      className="top"
                    >
                      <div
                        className="top-left"
                      >
                        <Link
                          className="link articleLink"
                          to="/4"
                        >
                          <LinkAnchor
                            className="link articleLink"
                            href="/4"
                            navigate={[Function]}
                          >
                            <a
                              className="link articleLink"
                              href="/4"
                              onClick={[Function]}
                            >
                              <div
                                className="title false edit"
                              >
                                How to use hooks in React?
                              </div>
                            </a>
                          </LinkAnchor>
                        </Link>
                        <div
                          className="buttons"
                        >
                          <button
                            className="waves-effect waves-light redC-bg lighten-3 btn btn-delete"
                            onClick={[Function]}
                          >
                            <i
                              className="material-icons center"
                            >
                              delete
                            </i>
                          </button>
                        </div>
                      </div>
                      <div
                        className="date"
                      >
                        2021-04-30
                      </div>
                    </div>
                    <div
                      className="bottom"
                    >
                      <div
                        className="descr"
                      >
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.
                      </div>
                    </div>
                  </div>
                </div>
              </Article>
            </Connect(Article)>
            <Connect(Article)
              date="2021-11-14"
              desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
              id={5}
              image=""
              isRead={false}
              key="5"
              name="How to use hooks in React?"
            >
              <Article
                date="2021-11-14"
                desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
                editMode={true}
                handleDeleteElement={[Function]}
                id={5}
                image=""
                isRead={false}
                name="How to use hooks in React?"
              >
                <div
                  className="container article"
                >
                  <div
                    className="leftImage"
                  >
                    <span>
                      No image
                    </span>
                  </div>
                  <div
                    className="rightDescr"
                  >
                    <div
                      className="top"
                    >
                      <div
                        className="top-left"
                      >
                        <Link
                          className="link articleLink"
                          to="/5"
                        >
                          <LinkAnchor
                            className="link articleLink"
                            href="/5"
                            navigate={[Function]}
                          >
                            <a
                              className="link articleLink"
                              href="/5"
                              onClick={[Function]}
                            >
                              <div
                                className="title false edit"
                              >
                                How to use hooks in React?
                              </div>
                            </a>
                          </LinkAnchor>
                        </Link>
                        <div
                          className="buttons"
                        >
                          <button
                            className="waves-effect waves-light redC-bg lighten-3 btn btn-delete"
                            onClick={[Function]}
                          >
                            <i
                              className="material-icons center"
                            >
                              delete
                            </i>
                          </button>
                        </div>
                      </div>
                      <div
                        className="date"
                      >
                        2021-11-14
                      </div>
                    </div>
                    <div
                      className="bottom"
                    >
                      <div
                        className="descr"
                      >
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.
                      </div>
                    </div>
                  </div>
                </div>
              </Article>
            </Connect(Article)>
            <Pagination
              amount={2}
            >
              <div
                className="pagination"
              >
                <div
                  className="pagination__container"
                >
                  <button
                    className="numberPage prev"
                    onClick={[Function]}
                  >
                    prev
                  </button>
                  <button
                    className="numberPage numberPage-1 active redC-bg"
                    key="1"
                    onClick={[Function]}
                  >
                    1
                  </button>
                  <button
                    className="numberPage numberPage-2 inactive"
                    key="2"
                    onClick={[Function]}
                  >
                    2
                  </button>
                  <button
                    className="numberPage next"
                    onClick={[Function]}
                  >
                    next
                  </button>
                </div>
              </div>
            </Pagination>
          </div>
        </List>
      </Connect(List)>
    </withRouter(Connect(List))>
  </Router>
</Provider>
`;

exports[`<List /> +++ render the component with 1 article 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <withRouter(Connect(List))>
        <Connect(List)
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "createHref": [Function],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/",
              "url": "/",
            }
          }
        >
          <List
            active={1}
            articles={
              Array [
                Object {
                  "date": "2021-05-20",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 1,
                  "image": "",
                  "isRead": true,
                  "name": "How to use hooks in React?",
                  "preview": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
                },
              ]
            }
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "createHref": [Function],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
            location={
              Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": undefined,
              }
            }
            match={
              Object {
                "isExact": true,
                "params": Object {},
                "path": "/",
                "url": "/",
              }
            }
            setActive={[Function]}
          >
            <div
              className="list"
            >
              <Connect(Edit)>
                <Edit
                  editMode={true}
                  handleMode={[Function]}
                >
                  <div
                    className="editMode__container editMode__container-edit"
                  >
                    <Link
                      className="waves-effect waves-light redC-bg lighten-3 btn"
                      to="/add"
                    >
                      <LinkAnchor
                        className="waves-effect waves-light redC-bg lighten-3 btn"
                        href="/add"
                        navigate={[Function]}
                      >
                        <a
                          className="waves-effect waves-light redC-bg lighten-3 btn"
                          href="/add"
                          onClick={[Function]}
                        >
                          <i
                            className="material-icons left"
                          >
                            add
                          </i>
                          Add article
                        </a>
                      </LinkAnchor>
                    </Link>
                    <button
                      className="waves-effect waves-light redC-bg lighten-3 btn"
                      onClick={[Function]}
                    >
                      <i
                        className="material-icons left"
                      >
                        close
                      </i>
                      Exit
                    </button>
                  </div>
                </Edit>
              </Connect(Edit)>
              <Connect(Article)
                date="2021-05-20"
                desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
                id={1}
                image=""
                isRead={true}
                key="1"
                name="How to use hooks in React?"
                preview="Lorem ipsum dolor sit amet consectetur adipisicing elit."
              >
                <Article
                  date="2021-05-20"
                  desc="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
                  editMode={true}
                  handleDeleteElement={[Function]}
                  id={1}
                  image=""
                  isRead={true}
                  name="How to use hooks in React?"
                  preview="Lorem ipsum dolor sit amet consectetur adipisicing elit."
                >
                  <div
                    className="container article"
                  >
                    <div
                      className="leftImage"
                    >
                      <span>
                        No image
                      </span>
                    </div>
                    <div
                      className="rightDescr"
                    >
                      <div
                        className="top"
                      >
                        <div
                          className="top-left"
                        >
                          <Link
                            className="link articleLink"
                            to="/1"
                          >
                            <LinkAnchor
                              className="link articleLink"
                              href="/1"
                              navigate={[Function]}
                            >
                              <a
                                className="link articleLink"
                                href="/1"
                                onClick={[Function]}
                              >
                                <div
                                  className="title read edit"
                                >
                                  How to use hooks in React?
                                </div>
                              </a>
                            </LinkAnchor>
                          </Link>
                          <div
                            className="buttons"
                          >
                            <button
                              className="waves-effect waves-light redC-bg lighten-3 btn btn-delete"
                              onClick={[Function]}
                            >
                              <i
                                className="material-icons center"
                              >
                                delete
                              </i>
                            </button>
                          </div>
                        </div>
                        <div
                          className="date"
                        >
                          2021-05-20
                        </div>
                      </div>
                      <div
                        className="bottom"
                      >
                        <div
                          className="descr"
                        >
                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.
                        </div>
                      </div>
                    </div>
                  </div>
                </Article>
              </Connect(Article)>
            </div>
          </List>
        </Connect(List)>
      </withRouter(Connect(List))>
    </Router>
  </BrowserRouter>
</Provider>
`;
